# updpkg

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.ci/: tarball.sh
.github/workflows/: ci.yml
src/: main.rs
testing/: PKGBUILD
tests/: test.rs
