[package]
name = "updpkg"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "A small tool for updating PKGBUILD recipes"
authors = ["Maksim Bondarenkov <maksapple2306@gmail.com>"]
repository = "https://github.com/ognevny/updpkg"
readme = "README.md"
rust-version = "1.70.0"
categories = ["command-line-utilities"]
keywords = ["CLI"]
exclude = ["/.ci", "/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "updpkg"
path = "src/main.rs"
